--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jest": "29.5.6",
     "@types/node": "20.8.9",
@@ -29,6 +30,7 @@
     "typescript": "5.2.2"
   },
   "dependencies": {
+    "bcrypt": "5.1.1",
     "dotenv": "16.3.1",
     "express": "4.18.2",
     "mongoose": "8.0.3",
