Chat completely functional and front end finished

--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ MONGO_URL=mongodb://root:password@localhost:27017/?authMechanism=DEFAULT
 #AUTHORIZED AUTH
 USER=root
 PASSWORD=1234
+
+#JWT SECRET
+SECRET=CrackRabbit
