--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.21",
     "@types/jest": "29.5.6",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/morgan": "^1.9.9",
     "@types/node": "20.8.9",
     "@typescript-eslint/eslint-plugin": "6.9.0",
     "cross-env": "7.0.3",
@@ -31,9 +34,12 @@
   },
   "dependencies": {
     "bcrypt": "5.1.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "16.3.1",
     "express": "4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "8.0.3",
+    "morgan": "1.10.0",
     "socket.io": "4.7.2"
   }
 }
