--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "prettier-format": "npx prettier --config .prettierrc 'src/**/*.ts' --write",
     "dev:watcher": "npx nodemon --watch 'src/**/*.ts' --exec ts-node src/backend/server.ts",
     "dev": "npx ts-node src/backend/server.ts",
-    "build": "npx tsc"
+    "build": "npx tsc",
+    "start": "node dist/backend/server.js"
   },
   "keywords": [],
   "author": "",
